[package]
name = "redis-rs"
version = "0.0.0+dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "redis_rs"
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.73"
redis = { version = "0.27.6", features = ["tokio-comp", "cluster-async"] }
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
tokio = "1.32.0"
bb8 = "0.9.0"
bb8-redis = "0.18.0"
openssl = { version = "0.10.57", optional = true }
serde = "1.0.192"
serde_json = "1.0.108"

[features]
rustls = ["redis/tokio-rustls-comp", "redis/tls-rustls-insecure"]
native-tls = ["redis/tokio-native-tls-comp", "openssl/vendored"]
