[package]
name = "redis-rs"
version = "0.0.0+dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "redis_rs"
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.73"
bb8 = "0.9.0"
bb8-redis = "0.20.0"
openssl = { version = "0.10.68", optional = true }
pyo3 = { version = "0.23.4", features = ["experimental-async", "extension-module"] }
redis = { version = "0.28.1", features = ["connection-manager", "tokio-comp", "cluster-async"] }
serde = "1.0.217"
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

[features]
rustls = ["redis/tokio-rustls-comp", "redis/tls-rustls-insecure"]
native-tls = ["redis/tokio-native-tls-comp", "openssl/vendored"]
