[package]
name = "redis-rs"
version = "0.0.0+dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "redis_rs"
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.86"
bb8 = "0.9.0"
bb8-redis = "0.24.0"
crc16 = "0.4.0"
openssl = { version = "0.10.70", optional = true }
pyo3 = { version = "0.27.0", features = ["experimental-async", "extension-module"] }
redis = { version = "0.32.0", features = ["connection-manager", "tokio-comp", "cluster-async"] }
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

[features]
rustls = ["redis/tokio-rustls-comp", "redis/tls-rustls-insecure"]
native-tls = ["redis/tokio-native-tls-comp", "openssl/vendored"]
