[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "redis-rs"
requires-python = ">=3.8"
description = "Python wrapper for redis-rs"
authors = [
    { name = "Alexander Malev", email = "yttrium@somedev.ru" },
]
keywords = [
    "redis",
    "redis-cluster",
    "rust",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
"Source Code" = "https://github.com/aamalev/redis-rs-py"
Issues = "https://github.com/aamalev/redis-rs-py/issues"
Documentation = "https://github.com/aamalev/redis-rs-py#using"
Changelog = "https://github.com/aamalev/redis-rs-py/releases"

[tool.mypy]
warn_redundant_casts = true
check_untyped_defs = true

[tool.black]
line-length = 120
target-version = [
    "py38",
    "py39",
    "py310",
    "py311",
]

[tool.ruff]
line-length = 120

[tool.hatch.envs.default]
dependencies = [
    "maturin",
    "mypy",
    "black",
    "ruff",
    "isort",
]

[tool.hatch.envs.default.scripts]
build = [
    "maturin develop",
]
check = [
    "ruff redis_rs",
    "mypy redis_rs",
    "cargo clippy",
]
fmt = [
    "cargo fmt",
    "isort redis_rs",
    "black redis_rs",
]
