[build-system]
requires = ["maturin>=1.7,<2.0", "hatchling"]
build-backend = "maturin"

[project]
name = "redis-rs"
dynamic = ["version"]
requires-python = ">=3.8"
license = {file = "LICENSE"}
description = "Python wrapper for redis-rs"
readme =  {"file" = "README.rst", "content-type" = "text/x-rst"}
authors = [
    { name = "Alexander Malev", email = "yttrium@somedev.ru" },
]
keywords = [
    "redis",
    "redis-cluster",
    "rust",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
"Source Code" = "https://github.com/aamalev/redis-rs-py"
Issues = "https://github.com/aamalev/redis-rs-py/issues"
Documentation = "https://github.com/aamalev/redis-rs-py#using"
Changelog = "https://github.com/aamalev/redis-rs-py/releases"

[tool.mypy]
warn_redundant_casts = true
check_untyped_defs = true
ignore_missing_imports = true


[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
extend-select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  # "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  # "SIM",
  # isort
  "I",
]
extend-ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.pytest.ini_options]
markers = [
    "redis",
]
asyncio_mode = "auto"
testpaths = [
    "redis_rs",
    "tests",
]
asyncio_default_fixture_loop_scope = "function"


[tool.hatch.version]
path = "Cargo.toml"

[tool.hatch.envs.default]
dependencies = [
    "maturin",
    "mypy",
    "ruff>0.1",
    "pytest-asyncio",
]

[tool.hatch.envs.default.scripts]
build = [
    "maturin develop",
]
check = [
    "ruff check redis_rs tests",
    "ruff format --check redis_rs tests",
    "mypy redis_rs tests",
    "cargo clippy",
]
fmt = [
    "cargo fmt",
    "ruff check --fix redis_rs tests",
    "ruff format redis_rs tests",
]
test = [
    "check",
    "cargo test",
    "pytest",
]

[[tool.hatch.envs.all.matrix]]
python = [
    "3.8",
    "3.9",
    "3.10",
    "3.11",
    "3.12",
]
